[gd_scene load_steps=7 format=2]

[ext_resource path="res://tscn/AiHumanoid.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/units/humanoid/WarriorHumanoid.gd" type="Script" id=2]
[ext_resource path="res://tscn/Weapon.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=6]
radius = 9.0
height = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 7 )

[node name="WarriorHumanoid" instance=ExtResource( 1 )]
collision_mask = 21
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="2"]
visible = false
position = Vector2( 2, 7 )
shape = SubResource( 6 )

[node name="EnemyDetector" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector" index="0"]
position = Vector2( 8, 6 )
shape = SubResource( 1 )

[node name="AttackDetector" type="Area2D" parent="." index="4"]
collision_layer = 4
collision_mask = 20
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector" index="0"]
position = Vector2( 10, 6 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="." index="5"]
margin_left = -6.0
margin_top = -13.0
margin_right = 7.0
margin_bottom = 1.0

[node name="Weapon" parent="." index="6" instance=ExtResource( 3 )]
position = Vector2( 1, 7 )

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
